# _ncnn

./: build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/lenovo/detect/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lenovo/detect/: DetectionResult.java  EngineWrapper.java  ImageUtil.java  MainActivity.java  RectView.java
app/src/main/res/drawable/: gray_track.xml  green_thumb.xml  green_track.xml  switch_thumb.xml  switch_track.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
engine/: build.gradle
engine/src/main/assets/age/: age_v2.param
engine/src/main/cpp/: CMakeLists.txt  age_detector_jni.cpp  android_log.h  definition.h  face_detector_jni.cpp  img_process.cpp  img_process.h  jni_long_field.h  key_point_detector_jni.cpp  live_jni.cpp  mtcnn_detector_jni.cpp
engine/src/main/cpp/age/: age_detector.cpp  age_detector.h
engine/src/main/cpp/detection/: face_detector.cpp  face_detector.h
engine/src/main/cpp/face/: mtcnn.cpp  mtcnn.h
engine/src/main/cpp/live/: live.cpp  live.h
engine/src/main/cpp/mtcnn/: mtcnn.cpp  mtcnn.h
engine/src/main/java/com/lenovo/engine/: Live.java  (+5 more)
engine/src/main/jni/: CMakeLists.txt  age_detector_jni.cpp  definition.h  key_point_detector_jni.cpp
engine/src/main/jni/age/: age_detector.cpp  age_detector.h
engine/src/main/jni/face/: mtcnn.cpp  mtcnn.h
engine/src/main/jni/live/: live.cpp
gradle/wrapper/: gradle-wrapper.properties
(+5 files in other folders)
